Got a little more of everything working

--- a/config/config.json
+++ b/config/config.json
@@ -400,7 +400,7 @@
       "title": "Lehigh CSB PwC Scholar",
       "date": "May 2019",
       "bullets": [
-        "Awarded as one of two students to receive a scholarship towards study abroad educational expenses",
+        "Awarded as one of two students to receive a $2,000 scholarship towards study abroad expenses",
         "Worked for PwC Czech Republic in Prague, Czechia, researching and developing a proof-of-concept Microsoft Excel blockchain plug-in"
       ]
     },
@@ -417,7 +417,7 @@
       "date": "April 2019",
       "bullets": [
         "Selected as one of two students by the Department of Computer Science & Engineering to represent the Class of 2021 in the RJF Honor Society",
-        "I help represent the P.C. Rossin College of Engineering & Applied Sciences to prospective students throough admissions events and admitted student days"
+        "I help represent the P.C. Rossin College of Engineering & Applied Sciences to prospective students through admissions events and admitted student days"
       ]
     },
     {
