--- a/config/config.json
+++ b/config/config.json
@@ -496,7 +496,7 @@
       "icon": "fab fa-node-js",
       "description": "Bootstrap is a front-end library for easily creating beautiful, intuitive components.",
       "subheading": "Map out your academic future",
-      "color": "blue"
+      "color": "#428bca"
     }
   ],
   "awards": [
