--- a/config/config.json
+++ b/config/config.json
@@ -28,7 +28,7 @@
       "I wanted to reach out about career opportunities",
       "I'm interested in your technical skills",
       "Tell me more about Preff...",
-      "Not sure how I got here...but sure why not"
+      "Not sure how I got here..."
     ],
     "bio": [
       "I surround myself with people who are smarter than me to learn from them. I'm motivated and determined to always better myself, and I bring out the best in others because I know that brings out the best in me.",
