--- a/config/config.json
+++ b/config/config.json
@@ -34,6 +34,7 @@
       "I surround myself with people who are smarter than me to learn from them. I'm motivated and determined to always better myself, and I bring out the best in others because I know that brings out the best in me.",
       "I'm entering into my junior year at Lehigh University, and am interested in internship opportunities in business and technology."
     ],
+    "resume": "resume.pdf",
     "carousel": [
       { 
         "image": "pwc.jpg", 
