--- a/config/config.json
+++ b/config/config.json
@@ -32,6 +32,7 @@
     ],
     "bio": [
       "I surround myself with people who are smarter than me to learn from them. I'm motivated and determined to always better myself, and I bring out the best in others because I know that brings out the best in me.",
+      "I'm driven to learn and persistently curious about business, computer science, and data analysis. I love applying the theory of computer science, math, and statistics to real-world business applications.",
       "I'm entering into my junior year at Lehigh University, and am interested in internship opportunities in business and technology."
     ],
     "resume": "resume.pdf",
