Add osi complete

--- a/public/config/config.json
+++ b/public/config/config.json
@@ -167,7 +167,7 @@
     {
       "role": "Software Development Intern",
       "company": "OSIsoft, LLC.",
-      "status": "current",
+      "status": "complete",
       "startDate": "June 2019",
       "endDate": "Aug. 2019",
       "bullets": [
