--- a/public/config/config.json
+++ b/public/config/config.json
@@ -650,7 +650,7 @@
       "title": "Piazza Tech Tour Finalist",
       "date": "Aug. 2019",
       "bullets": [
-        "Selected as one of 10 Finalists for the Piazza Summer 2019 Tech Tour",
+        "Selected as one of 10 Finalists from 10,000 applicants for the Piazza Summer 2019 Tech Tour",
         "Piazza is an online educational technology platform that is utilized by 50,000 professors in 2,000 schools in more than 90 different countries"
       ]
     },
