--- a/public/config/config.json
+++ b/public/config/config.json
@@ -165,6 +165,13 @@
   ],
   "experience": [
     {
+      "role": "Incoming Software Development Intern",
+      "company": "Microsoft - Azure Compute",
+      "status": "",
+      "startDate": "June 2020",
+      "endDate": "Aug. 2020"
+    },
+    {
       "role": "Software Development Intern",
       "company": "OSIsoft, LLC.",
       "status": "complete",
