--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "devicons": "^1.8.0",
+    "firebase": "^7.16.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "jquery.easing": "^1.4.1",
