--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "@vue/cli-plugin-pwa": "^3.9.0",
     "@vue/cli-plugin-typescript": "^3.9.0",
     "@vue/cli-service": "^4.2.3",
+    "kind-of": ">=6.0.3",
     "minimist": ">=1.2.2",
     "node-sass": "^4.13.1",
     "sass-loader": "^7.1.0",
     "serialize-javascript": "3.0.0",
+    "tslint-config-standard": "^9.0.0",
     "typescript": "^3.4.3",
-    "vue-template-compiler": "^2.6.10",
-    "kind-of": ">=6.0.3"
+    "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
     "plugins": {
