--- a/public/config/config.json
+++ b/public/config/config.json
@@ -654,7 +654,7 @@
     {
       "id": "preff",
       "title": "Preff",
-      "image": "preff.jpg",
+      "image": "preff.png",
       "link": "https://www.preff.menu",
       "description": [
         "Preff is an entrepreneurial venture that I have been working on with friends Dom Allen, Jack Cunningham, and Cam Cipriano. Preff started as an idea for a meal-swipe app, but has since become the next way for people to meet up over a meal.",
